minor: fix spacing before and after the SlugPreviewFormField

--- a/client/src/styles/renku_bootstrap_customization.scss
+++ b/client/src/styles/renku_bootstrap_customization.scss
@@ -1,6 +1,9 @@
 // Functions: should be imported first
 @import "~bootstrap/scss/functions";
 
+// Enable negative margins utility
+$enable-negative-margins: true;
+
 // Font
 @import "./fonts/fonts";
 $font-family-base: "Inter", sans-serif;
